package com.iluwatar.my_decorator_0;

public class BasketBall extends MovableBall {

	public BasketBall() {
		super();
		// TODO Auto-generated constructor stub
	}

	public BasketBall(double x, double y, double r, double weight, String color, double dx, double dy) {
		super(x, y, r, weight, color, dx, dy);
		// TODO Auto-generated constructor stub
	}

	public BasketBall(double dx, double dy) {
		super(dx, dy);
		// TODO Auto-generated constructor stub
	}

	
}
